--- a/.github/workflows/cron-send-emails.yml
+++ b/.github/workflows/cron-send-emails.yml
@@ -24,10 +24,9 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json 
+          cache-dependency-path: ./backend/package-lock.json 
 
       - name: Write Firebase service account (raw JSON)
-        if: env.FIREBASE_SERVICE_ACCOUNT != ''
         run: |
           echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > ${{ github.workspace }}/service-account.json
           chmod 600 ${{ github.workspace }}/service-account.json
