--- a/.github/workflows/cron-send-emails.yml
+++ b/.github/workflows/cron-send-emails.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: ./backend/package-lock.json 
+          cache-dependency-path: ./back-end/package-lock.json 
 
       - name: Write Firebase service account (raw JSON)
         run: |
@@ -36,14 +36,14 @@ jobs:
         run: |
           cd backend
           npm ci
-        working-directory: ./backend
+        working-directory: ./back-end
         shell: bash
 
       - name: Run sendEmails script
         run: |
           cd backend
           node sendEmails.js
-        working-directory: ./backend
+        working-directory: ./back-end
         env:
           # tell Firebase Admin SDK where to find credentials
           GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service-account.json
