--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^24.3.1"
   },
   "dependencies": {
-    "firebase-admin": "^13.5.0"
+    "firebase-admin": "^13.5.0",
+    "nodemailer": "^6.9.8"
   }
 }
