Replace repo content 14

--- a/.github/workflows/cron-send-emails.yml
+++ b/.github/workflows/cron-send-emails.yml
@@ -43,12 +43,12 @@ jobs:
           cd back-end
           node sendEmails.js
         env:
-          # tell Firebase Admin SDK where to find credentials
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service-account.json
-          # Firebase config
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          # SMTP (nodemailer)
-          EMAIL_USER: ${{ secrets.EMAIL_USER }}
-          EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
-          # misc
-          NODE_ENV: production
+            FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+            FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+            FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+
+            # SMTP (nodemailer)
+            EMAIL_USER: ${{ secrets.EMAIL_USER }}
+            EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+            # misc
+            NODE_ENV: production
