--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "type": "module",      
+  "type": "module",
   "scripts": {
     "notify": "node sendEmails.js"
   },
@@ -9,7 +9,8 @@
     "@types/node": "^24.3.1"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
     "firebase-admin": "^13.5.0",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.10.1"
   }
 }
