--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2"
+  },
+  "scripts": {
+    "build": "npm install --prefix front-end && npm run build --prefix front-end"
   }
-
 }
